html.assignment.html

--- a/html.assignment.html
+++ b/html.assignment.html
@@ -9,12 +9,12 @@
           <h2 align="center"> <em>Let's start exploring the Disneyland!</em></h2>
               <iframe align="center" width="1308" height="736" src="https://www.youtube.com/embed/zj_6Jm_qVos" title="Let It Go踏入前所未有嘅世界 Let It Go Like Never Before | 香港迪士尼樂園 Hong Kong Disneyland" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           <h2 align="center"> <br><br><br> <em>Let us bring you to meet our beloved character in the park! </em> </h2>
-              <img src="C:\Users\olivia\Downloads\hong kong disneyland.jpg" width="96%" height="96%"> 
+              <img src="hong kong disneyland.jpg" width="96%" height="96%"> 
               <h3 align="center"><br><br><br> First, Let us introduce you the Duffy and Friends! </h3>
-                  <img src="C:\Users\olivia\Downloads\Duffy and Friends.png"
+                  <img src="Duffy and Friends.png"
                   <p align="center"><br><br> Visit <a href="https://www.hongkongdisneyland.com/entertainment/character-meet-duffy-and-friends/?CMP=ILC-DPFY17Q3wo62820180017G">Duffy and Friends</a> </p>
                <h3 align="center"><br><br><br> Second, Let us introduce you the Disney Princesses and Queens! </h3>
-                  <img src="C:\Users\olivia\Downloads\Disney Princesses.webp" width="93%" height="93%">
+                  <img src="Disney Princesses.webp" width="93%" height="93%">
                   <p><br> Visit <a href="https://www.hongkongdisneyland.com/princess-queen/">The Disney Princess and Queens</a> </p>
          <h2 align="center"> <br><br><br> <em>Now, Let's see what's inside our park! </em></h2>   
             <ul align="center">
